--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -47,7 +47,7 @@
         {% endif %}
 
     {% if post.excerpt and site.read_more != 'enabled' %}
-    <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }} <hr /></p>
+    <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }} <HR style="border:1 dashed #987cb9" width="80%" color=#987cb9 SIZE=1></p>
     {% elsif post.excerpt and site.read_more == 'enabled' %}
     <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p></p>
     {% endif %}
